--- a/public/style.css
+++ b/public/style.css
@@ -170,6 +170,7 @@ button {
     width: 90vw;
     min-height: 380px;
     max-height: 50vh;
+    max-width: 290px;
     object-fit: cover;
 }
 
@@ -375,6 +376,30 @@ button {
 
 .svg-linkedin:hover, .svg-linkedin:focus {
     fill: #0a66c2;
+}
+/*!*************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Style/m-about.css ***!
+  \*************************************************************************/
+@media (min-width: 426px) {
+    .profile-container {
+        gap: 25px;
+    }
+
+    .aboutme-text {
+        text-align: center;
+    }
+}
+/*!****************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Style/m-projects.css ***!
+  \****************************************************************************/
+@media (min-width: 426px) {
+    .projects__item {
+        max-width: 500px;
+    }
+
+    .projects-image {
+        width: 90%;
+    }
 }
 /*!***************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Style/dark-mode.css ***!
